--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
+  color: #C9C2C3;
+  font-family: "Montserrat", serif;
 }
 
 body {
-  background-color: #090909;
+  background-color: #000;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
