--- a/src/pages/Layout/Layout.module.css
+++ b/src/pages/Layout/Layout.module.css
@@ -1,5 +1,6 @@
 .mainContainer {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     width: 375px;
