--- a/src/pages/ProfilePage/ui/HabitList/ui/NavBar/NavBar.module.css
+++ b/src/pages/ProfilePage/ui/HabitList/ui/NavBar/NavBar.module.css
@@ -6,13 +6,15 @@
     top: 0;
     left: 0;
     overflow-x: hidden;
-    transition: 0.5s;
+    transition: 0.5s, visibility 0s;
     background-color: #000;
     border-radius: 10px 0px 0px 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    visibility: visible;
+    opacity: 1;
 }
 
 .link {
@@ -51,4 +53,10 @@
 
 .opened {
     width: 283px;
+}
+
+.sidenav:not(.opened) {
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s, visibility 0s 0.5s;
 }
