--- a/src/pages/NewHabitPage/NewHabitPage.module.css
+++ b/src/pages/NewHabitPage/NewHabitPage.module.css
@@ -4,6 +4,7 @@
     padding-left: 18px;
     width: 100%;
     box-sizing: border-box;
+    padding-top: 62px;
 }
 
 .habitIconSection {
@@ -19,13 +20,6 @@
 .title {
     font-size: 36px;
     font-weight: 800;
-}
-
-.backButton {
-    margin-top: 62px;
-    width: 30px;
-    height: 44px;
-    cursor: pointer;
 }
 
 .addButton {
