--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -23,21 +23,8 @@
     user-select: none;
 }
 
-.addButton {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #C9C2C3;
-    color: #000;
-    font-size: 48px;
-    font-weight: 300;
-    cursor: pointer;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.profilePageAddButton {
     position: absolute;
     bottom: 65px;
     right: 16px;
 }
-
