--- a/src/pages/HabitPage/HabitPage.module.css
+++ b/src/pages/HabitPage/HabitPage.module.css
@@ -68,3 +68,16 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.chatLink {
+    background-color: #18161A;
+    border: 1px solid #C9C2C3;
+    width: 307px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+}
