--- a/src/pages/ChatPage/ChatPage.module.css
+++ b/src/pages/ChatPage/ChatPage.module.css
@@ -1,7 +1,12 @@
+/* ChatPage.module.css */
 .chatPage {
     background-color: #18161A;
-    height: 100%;
-    width: 100%;
+    height: 100vh; /* Занимает всю высоту экрана */
+    width: 375px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; /* Скрываем всё, что выходит за границы */
 }
 
 .inputContainer {
@@ -18,16 +23,9 @@
 .input {
     background-color: #18161A;
     border-radius: 45px;
-    padding: 5px;
+    padding: 10px 15px;
     outline: none;
     border: 0;
     width: 300px;
-}
-
-.sendBtn {
-    outline: none;
-    border: 1px solid #fff;
-    cursor: pointer;
-    background-color: #18161A;
-    padding: 5px;
+    color: white; /* Цвет текста */
 }
