--- a/src/pages/NewHabitPage/NewHabitPage.module.css
+++ b/src/pages/NewHabitPage/NewHabitPage.module.css
@@ -1,58 +1,30 @@
 .newHabitPage {
     display: flex;
     flex-direction: column;
-    padding-left: 18px;
     width: 100%;
+    padding: 18px;
     box-sizing: border-box;
     padding-top: 62px;
 }
 
-.habitIconSection {
-    margin-right: 18px;
+.habitForm {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 22px;
-    margin-top: 20px;
+    gap: 8px;
 }
 
-.title {
-    font-size: 36px;
-    font-weight: 800;
-}
-
-.addButton {
-    width: 150px;
-    height: 150px;
-    border-radius: 61px;
-    background-color: #C9C2C3;
+.createBtn {
+    background-color: #fff;
     color: #000;
-    font-size: 128px;
-    font-weight: 300;
-    cursor: pointer;
+    font-weight: 600;
+    font-size: 16px;
     border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border-radius: 8px;
+    padding: 16px;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
-.addButton:active {
-    outline: none;
-}
-
-.habitInfoSection {
-    margin-top: 104px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.habitInfoTitle, .habitInfoSubtitle {
-    font-size: 19px;
-    font-weight: 800;
-}
-
-.pink {
-    color: #C700FD;
+.createBtn:hover {
+    background-color: #ffffffe5;
 }
