--- a/src/shared/ui/Calendar/Calendar.module.css
+++ b/src/shared/ui/Calendar/Calendar.module.css
@@ -26,7 +26,14 @@
 }
 
 .date {
-    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.status {
+    height: 17px;
+    width: 17px;
 }
 
 .dateActive {
